--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 	<!--<script src="js/getdata.js" type="text/javascript" charset="utf-8"></script>-->
     <title></title>
     <script type="text/javascript">
-    	
    		document.addEventListener('plusready', function(){
    			//console.log("所有plus api都应该在此事件发生后调用，否则会出现plus is undefined。"
    			
@@ -74,6 +73,7 @@
 			</div>
 			<div class="win_box hide">
 				<span id="win_tipcon"></span>
+				<button class="no">取消</button>
 				<button class="close">确认</button>
 			</div>
 	</div>
